reading JSON files in JAR archive